# ink-reader

./: AGENTS.md  Cargo.toml  LEARNINGS.md  Makefile  README.md
.github/workflows/: ci.yml
src/: app.rs  book.rs  main.rs  storage.rs
src/formats/: epub.rs  mobi.rs  mod.rs  pdf.rs  txt.rs
src/ui/: bookmarks.rs  mod.rs  reader.rs  toc.rs
