[package]
name = "ink-reader"
version = "0.1.0"
edition = "2024"
description = "Ink on the terminal — read epubs, mobi, azw3, pdf, txt"

[[bin]]
name = "ink-reader"
path = "src/main.rs"

[dependencies]
# Format readers
rbook = "0.7"
mobi = "0.8"
pdf_oxide = "0.3"
html2text = "0.17"

# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Text processing
textwrap = "0.16"
unicode-width = "0.2"

# Data & persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Error handling & CLI
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
